logs/dag_id=rand_user/run_id=manual__2023-11-10T10:39:46.058446+00:00/task_id=destinatin_table/attempt=2.log
[2023-11-10T10:40:49.009+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [queued]>
[2023-11-10T10:40:49.023+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [queued]>
[2023-11-10T10:40:49.023+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-10T10:40:49.024+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 3
[2023-11-10T10:40:49.024+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-10T10:40:49.044+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): destinatin_table> on 2023-11-10 10:39:46.058446+00:00
[2023-11-10T10:40:49.050+0000] {standard_task_runner.py:55} INFO - Started process 4129 to run task
[2023-11-10T10:40:49.054+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'destinatin_table', 'manual__2023-11-10T10:39:46.058446+00:00', '--job-id', '162', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmp94givl1_']
[2023-11-10T10:40:49.057+0000] {standard_task_runner.py:83} INFO - Job 162: Subtask destinatin_table
[2023-11-10T10:40:49.120+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [running]> on host 91f7624ceef9
[2023-11-10T10:40:49.190+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=destinatin_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-10T10:39:46.058446+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-10T10:39:46.058446+00:00
[2023-11-10T10:40:49.200+0000] {base.py:71} INFO - Using connection ID 'Destination_table' for task execution.
[2023-11-10T10:40:49.204+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS rand_users (
        gender TEXT NOT NULL,
        title TEXT NOT NULL,
        firstname TEXT NOT NULL,
        lastname TEXT NOT NULL,
        country TEXT NOT NULL,
        username TEXT NOT NULL,
        password TEXT NOT NULL,
        email TEXT NOT NULL,
        age TEXT NOT NULL
        , parameters: None
[2023-11-10T10:40:49.206+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 12:         
                 ^

[2023-11-10T10:40:49.215+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=rand_user, task_id=destinatin_table, execution_date=20231110T103946, start_date=20231110T104049, end_date=20231110T104049
[2023-11-10T10:40:49.227+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 162 for task destinatin_table (syntax error at end of input
LINE 12:         
                 ^
; 4129)
[2023-11-10T10:40:49.266+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-10T10:40:49.285+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
